[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/gui/hud/player_healthbar/assets/healthbar_progress.png" type="Texture" id=1]
[ext_resource path="res://assets/gui/hud/player_healthbar/assets/damaged_border.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/hud/player_healthbar/assets/healthbar_border_player.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/hud/player_healthbar/sounds/low_health.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/gui/hud/player_healthbar/assets/healthbar_loss.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/hud/player_healthbar/scripts/player_healthbar.gd" type="Script" id=9]

[node name="player_healthbar" type="CanvasLayer"]
scale = Vector2( 5, 5 )
transform = Transform2D( 5, 0, 0, 5, 0, 0 )
script = ExtResource( 9 )

[node name="low_health_border" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 128.4, 72 )
scale = Vector2( 2.66667, 1.5 )
texture = ExtResource( 2 )

[node name="health_under" type="TextureProgress" parent="."]
margin_left = 11.0
margin_top = 2.0
margin_right = 46.0
margin_bottom = 10.0
value = 61.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="health_over" type="TextureProgress" parent="."]
margin_left = 11.0
margin_top = 2.0
margin_right = 46.0
margin_bottom = 10.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shake_duration" type="Timer" parent="."]

[node name="tween" type="Tween" parent="."]

[node name="pulse" type="Tween" parent="."]

[node name="low_health" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.162
pitch_scale = 0.62
[connection signal="tween_all_completed" from="pulse" to="." method="_on_pulse_tween_all_completed"]
